...
    while (prev > 0) {
      int prevLineStart = text.lastIndexOf('\n', prev - 1);
      prevLineStart = prevLineStart == -1 ? 0 : prevLineStart + 1;
      final prevLine = text.substring(prevLineStart, prev);
      if (_numberedCaptureRegex.hasMatch(prevLine)) {
        count++;
        prev = prevLineStart - 1;
      } else {
        break;
      }
    }
    return count;
  }
...
