...
                    ),
                  );
              }
            },
            itemBuilder: (context) => [
              PopupMenuItem(
                value: 'sort',
                child: Text(l10n(context).sortNotes),
              ),
              PopupMenuItem(
                value: 'density',
                child: Text(l10n(context).changeViewDensity),
              ),
...
